--- a/application.yml
+++ b/application.yml
@@ -3,6 +3,6 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-    #  defaultZone: http://localhost:
+      defaultZone: http://localhost:8761/eureka/
   instance:
-    hostname: localhost00
+    hostname: localhost
